# controller/conf_controller.go
@@ -17,7 +17,7 @@ type ConfController struct {
 // @Accept json
 // @Produce json
 // @Success 200 {string} json {"code","msg","data"}
-// @Router /conf/get [get]
+// @Router /ec/conf/get [get]
 func (con ConfController) GetConfig(c *gin.Context) {
 	conf := commons.GetESConfigs()
 	con.Ok(c, "获取配置成功", conf)
@@ -30,7 +30,7 @@ func (con ConfController) GetConfig(c *gin.Context) {
 // @Produce json
 // @Param        newConfig    body     models.ESConfig  false  "es配置"
 // @Success 200 {string} json{"code","msg","data"}
-// @Router /conf/add [post]
+// @Router /ec/conf/add [post]
 func (con ConfController) AddConfig(c *gin.Context) {
 	var newConfig models.ESConfig
 	if err := c.ShouldBindJSON(&newConfig); err != nil {
@@ -53,7 +53,7 @@ func (con ConfController) AddConfig(c *gin.Context) {
 // @Produce json
 // @Param        name    query     string  false  "索引名称"
 // @Success 200 {string} json{"code","msg","data"}
-// @Router /conf/del [post]
+// @Router /ec/conf/del [post]
 func (con ConfController) DeleteConfig(c *gin.Context) {
 	name := c.Query("name")
 	err := commons.DeleteESConfig(name)
@@ -71,7 +71,7 @@ func (con ConfController) DeleteConfig(c *gin.Context) {
 // @Produce json
 // @Param        newConfig    body     models.ESConfig  false  "es配置"
 // @Success 200 {string} json{"code","msg","data"}
-// @Router /conf/use [post]
+// @Router /ec/conf/use [post]
 func (con ConfController) SelectConfig(c *gin.Context) {
 	var newConfig models.ESConfig
 	if err := c.ShouldBindJSON(&newConfig); err != nil {
